--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CajeroAutomatico</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
 
